[project]
name = "onboardlite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.1",
    "commonmark==0.9.1",
    "email-validator>=2.3.0",
    "fastapi[standard]==0.128.0",
    "google-api-python-client~=2.188.0",
    "google-auth~=2.48.0",
    "jinja2==3.1.6",
    "joserfc==1.6.1",
    "passes-rs-py==4.0.1",
    "pydantic~=2.12.5",
    "pydantic-settings~=2.12.0",
    "python-keycloak~=7.0.2",
    "pyyaml~=6.0.2",
    "requests~=2.32.5",
    "requests-oauthlib==2.0.0",
    "sentry-sdk~=2.49.0",
    "sqlmodel==0.0.31",
    "stripe==14.2.0",
    "typing-extensions~=4.15.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx",
    "pre-commit",
    "pytest>=8.3.5",
    "semgrep",
    "virtualenv",
]
