[project]
name = "onboardlite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "commonmark==0.9.1",
    "email-validator>=2.3.0",
    "fastapi[standard]==0.135.2",
    "google-api-python-client~=2.193.0",
    "google-auth~=2.48.0",
    "jinja2==3.1.6",
    "joserfc==1.6.3",
    "passes-rs-py==4.0.1",
    "pydantic~=2.12.5",
    "pydantic-settings~=2.13.1",
    "python-keycloak~=7.1.1",
    "pyyaml~=6.0.2",
    "requests~=2.33.0",
    "requests-oauthlib==2.0.0",
    "sentry-sdk~=2.54.0",
    "sqlmodel==0.0.37",
    "stripe==15.0.1",
    "typing-extensions~=4.15.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx",
    "pre-commit",
    "pytest>=8.3.5",
    "semgrep",
    "virtualenv",
]
